--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "docs:dev": "vitepress dev docs",
         "docs:build": "vitepress build docs",
         "docs:serve": "vitepress serve docs",
-        "deploy": "node docs/index.js && deploy.sh"
+        "deploy": "deploy.sh"
     },
     "keywords": [],
     "author": "",
